# hive-mind

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py  test_basic.py  test_system.py
config/: default_config.yaml
examples/: basic_usage.py  compare_algorithms.py
src/hive_mind/: __init__.py
src/hive_mind/api/: __init__.py  main.py
src/hive_mind/consensus/: __init__.py  consensus_engine.py
src/hive_mind/core/: __init__.py  conversation.py  hive_mind.py
src/hive_mind/denoising/: __init__.py  denoising_engine.py
src/hive_mind/memory/: __init__.py  memory_manager.py
src/hive_mind/models/: __init__.py  anthropic_provider.py  base_model.py  cohere_provider.py  model_config.py  model_factory.py  openai_provider.py  response.py
src/hive_mind/reputation/: __init__.py  reputation_manager.py
src/hive_mind/utils/: __init__.py  config_loader.py  logger.py
tests/: test_basic.py
web/: index.html
